simon.com header and font

--- a/símon/index.html
+++ b/símon/index.html
@@ -8,6 +8,11 @@
     <title>Símon.com</title>
   </head>
   <body>
+    <nav>
+      <h1>Símon.com</h1>
+      <h2>Studio or computational design</h3>
+      <h3>About Words</h3>
+    </nav>
     <div id="trailer"></div>
   </body>
   <script src="./script.js"></script>
