header and big btns

--- a/símon/index.html
+++ b/símon/index.html
@@ -8,11 +8,18 @@
     <title>Símon.com</title>
   </head>
   <body>
-    <nav>
-      <h1>Símon.com</h1>
-      <h2>Studio or computational design</h3>
-      <h3>About Words</h3>
+    <!-- Navigation -->
+    <nav class="navbar">
+      <h1><a>Símon.com</a></h1>
+      <h2>Studio or computational design</h2>
+      <h3><a>About Words</a></h3>
     </nav>
+
+    <!-- 2 big btns -->
+    <section class="bigbtns">
+      <button class="biggy">Analog</button>
+      <button class="biggy">Designed</button>
+    </section>
     <div id="trailer"></div>
   </body>
   <script src="./script.js"></script>
