invert cursor color on hover

--- a/símon/index.html
+++ b/símon/index.html
@@ -17,8 +17,8 @@
 
     <!-- 2 big btns -->
     <section class="bigbtns">
-      <button class="biggy">Analog</button>
-      <button class="biggy">Designed</button>
+      <button>Analog</button>
+      <button>Designed</button>
     </section>
     <div id="trailer"></div>
   </body>
