--- a/símon/index.html
+++ b/símon/index.html
@@ -20,6 +20,138 @@
       <button>Analog</button>
       <button>Designed</button>
     </section>
+
+    <!-- work -->
+    <section class="work">
+      <ul class="list">
+        <li class="list-item">
+          <a>
+            <div class="list-content">
+              <span>01</span>
+              <h2>Bygdepride</h2>
+              <h3>2022</h3>
+            </div>
+          </a>
+        </li>
+        <li class="list-item">
+          <a>
+            <div class="list-content">
+              <span>02</span>
+              <h2>Merknad</h2>
+              <h3>2020</h3>
+            </div>
+          </a>
+        </li>
+        <li class="list-item">
+          <a>
+            <div class="list-content">
+              <span>03</span>
+              <h2>Code of Design</h2>
+              <h3>(wip)</h3>
+            </div>
+          </a>
+        </li>
+        <li class="list-item">
+          <a>
+            <div class="list-content">
+              <span>04</span>
+              <h2>OOO.COM</h2>
+              <h3>(wip)</h3>
+            </div>
+          </a>
+        </li>
+        <li class="list-item">
+          <a>
+            <div class="list-content">
+              <span>05</span>
+              <h2>The Macallan</h2>
+              <h3>(soon)</h3>
+            </div>
+          </a>
+        </li>
+        <li class="list-item">
+          <a>
+            <div class="list-content">
+              <span>06</span>
+              <h2>Noko Noko</h2>
+              <h3>(soon)</h3>
+            </div>
+          </a>
+        </li>
+        <li class="list-item">
+          <a>
+            <div class="list-content">
+              <span>07</span>
+              <h2>Wallpapers</h2>
+              <h3>(soon)</h3>
+            </div>
+          </a>
+        </li>
+        <li class="list-item">
+          <a>
+            <div class="list-content">
+              <span>08</span>
+              <h2>Kva (for)tener du?</h2>
+              <h3>(soon)</h3>
+            </div>
+          </a>
+        </li>
+        <li class="list-item">
+          <a>
+            <div class="list-content">
+              <span>09</span>
+              <h2>Carbon Tracker</h2>
+              <h3>(soon)</h3>
+            </div>
+          </a>
+        </li>
+        <li class="list-item">
+          <a>
+            <div class="list-content">
+              <span>10</span>
+              <h2>Paginate</h2>
+              <h3>2019</h3>
+            </div>
+          </a>
+        </li>
+        <li class="list-item">
+          <a>
+            <div class="list-content">
+              <span>11</span>
+              <h2>Teston</h2>
+              <h3>2019</h3>
+            </div>
+          </a>
+        </li>
+        <li class="list-item">
+          <a>
+            <div class="list-content">
+              <span>12</span>
+              <h2>Dartitis Clinic</h2>
+              <h3>2018</h3>
+            </div>
+          </a>
+        </li>
+        <li class="list-item">
+          <a>
+            <div class="list-content">
+              <span>13</span>
+              <h2>Racer</h2>
+              <h3>2016</h3>
+            </div>
+          </a>
+        </li>
+        <li class="list-item">
+          <a>
+            <div class="list-content">
+              <span>14</span>
+              <h2>Sprekest</h2>
+              <h3>2015</h3>
+            </div>
+          </a>
+        </li>
+      </ul>
+    </section>
     <div id="trailer"></div>
   </body>
   <script src="./script.js"></script>
