navbar hover effect

--- a/símon/index.html
+++ b/símon/index.html
@@ -10,9 +10,9 @@
   <body>
     <!-- Navigation -->
     <nav class="navbar">
-      <h1><a>Símon.com</a></h1>
+      <a class="interactable"><h1>Símon.com</h1></a>
       <h2>Studio or computational design</h2>
-      <h3><a>About Words</a></h3>
+      <a class="interactable"><h2>About Words</h2></a>
     </nav>
 
     <!-- 2 big btns -->
