--- a/símon/index.html
+++ b/símon/index.html
@@ -14,7 +14,7 @@
 
       <h2>Studio or computational design</h2>
       <di class="navbar-content">
-        <a class="interactable" data-hover="The offical blurb"
+        <a class="interactable" data-hover="The official blurb"
           ><h2>About</h2></a
         >
         <a class="interactable" data-hover="Thoughts and updates"
@@ -160,6 +160,11 @@
         </li>
       </ul>
     </section>
+    <footer>
+      <h3>Visual language</h3>
+      <h3>&copy; 2022</h3>
+      <h3>Amsterdam</h3>
+    </footer>
     <div id="trailer"></div>
     <div id="trailer-text"></div>
   </body>
